# django_template

./: .gitignore  Dockerfile  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
.github/workflows/: startproject.yml
data/: README.md
docs/: index.md
docs/decisions/: xxxx-templates.md
docs/tutorials/: your-first-day.md
hooks/: post_gen_project.py  pre_gen_project.py
src/: entrypoint.sh
src/django_template/main/: views.py
{{ cookiecutter.project_slug }}/: Dockerfile  docker-compose.yml  example.env  mkdocs.yml  pyproject.toml  tasks.py
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/docs/decisions/: 0000-architectural-decision-records.md
{{ cookiecutter.project_slug }}/docs/how-tos/: test_ci_workflows_locally.md  vscode.md
{{ cookiecutter.project_slug }}/docs/reference/: commands.md  entrypoint.md  envvars.md
{{ cookiecutter.project_slug }}/docs/tutorials/: your-first-day.md
{{ cookiecutter.project_slug }}/src/: entrypoint.sh
{{ cookiecutter.project_slug }}/src/tests/system/accounts/: test_models.py
{{ cookiecutter.project_slug }}/src/tests/system/main/: test_views.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: asgi.py  manage.py  settings.py  wsgi.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/main/: asgi.py  settings.py  wsgi.py
