[project]
name = "{{ cookiecutter.project_slug }}"
description = ""
readme = "README.md"
authors = [
    {name = "Jonathan Moss", email = "jonathan@miss-scarlet.house"}
]
version = "0"
requires-python = ">=3.13,<4"

dependencies = [
    "django >= 5.1.5, < 6",
    "django-environ >= 0.12.0, < 1.0",
    "psycopg [binary, pool] >= 3.2.0, < 4.0.0",
    "uvicorn >= 0.34.0, < 1.0",
    "uvloop  >= 0.21.0, < 1.0.0; sys_platform != 'win32'",
    "sentry-sdk >= 2.22.0, < 3.0",
    "httptools >= 0.6.4, < 1.0"
]

[project.scripts]
manage = "{{ cookiecutter.project_slug }}.manage:main"

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.1.3,<6",
    "factory-boy>=3.3.0,<4",
    "invoke>=2.2.0,<3",
    "ipython>=8.32.0,<9",
    "mkdocs>=1.6.0,<2",
    "mkdocs-material>=9.6.5",
    "mkdocstrings[python]>=0.28.0",
    "mypy[mypyc]>=1.15.0,<2",
    "pudb>=2024.1.0,<2025",
    "pytest>=8.3.0,<9",
    "pytest-cov>=6.0.0,<7",
    "pytest-django>=4.10.0,<5",
    "pytest-playwright>=0.7.0,<0.8",
    "pytest-spec>=4.0.0,<5",
    "ruff>=0.9.8,<0.10",
]


[tool.hatch.build.targets.sdist]
include = ["src/{{ cookiecutter.project_slug }}"]

[tool.hatch.build.targets.wheel]
include = ["src/{{ cookiecutter.project_slug }}"]

[tool.hatch.build.targets.wheel.sources]
"src/{{ cookiecutter.project_slug }}" = "{{ cookiecutter.project_slug }}"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "environ"

[tool.django-stubs]
django_settings_module = "{{ cookiecutter.project_slug }}.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{ cookiecutter.project_slug }}.settings"
addopts = "--rootdir src --spec"
norecursedirs = ".git .venv docs data"
spec_header_format = "{test_case} [{module_path}]:"

markers = """
    functional: functions/end-to-end tests
    system: Regular integration and unit tests
"""

# We should never be dealing with naive datetimes. If we need to test with
# naive datetimes, we should explicitly catch the warning in the test.
# Otherwise, naive datetimes should raise errors.
filterwarnings = """
    error:.*received a naive datetime:RuntimeWarning:django.db.models.fields
"""

[tool.coverage.run]
omit = ["**/migrations/*"]

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "B0", # flake8-bugbear (not opinionated)
    "E", # pycodestyle (errors)
    "F", # pyflake
    "W", # pycodestyle (warnings)
    "S", # flake8-bandit
    "I", # isort
    "C90"  # mccabe
]

[tool.ruff.lint.per-file-ignores]
"src/tests/*" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 15
